# DS-Assignment1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UI_Demo  a.out  main.cpp  tester.cpp
application/: CMakeLists.txt  application.cpp  application.hpp  constants.h  exceptions.hpp  helper.hpp  logger.hpp
application/include/: application.hpp
polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.hpp
polynomial/include/: polynomial.hpp
test/: CMakeLists.txt  test.cpp  test_polynomial
